log
Thu, Sep 18, 2025  4:55:15 PM: 
 treemap.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 60 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:102:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if(tree = NULL || node == NULL){
             ^
treemap.c:102:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(tree = NULL || node == NULL){
     ^~
cc1.exe: all warnings being treated as errors
5729e4d
Thu, Sep 18, 2025  4:56:43 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
173b01f
Thu, Sep 18, 2025  5:06:58 PM: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  8|5
total_score: 15/70
bd4ccd5
Thu, Sep 18, 2025  5:10:11 PM: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|5
total_score: 15/70
6446dfe
Thu, Sep 18, 2025  5:30:39 PM: 
 treemap.c | 46 ++++++++++++++++++++++++++--------------------
 1 file changed, 26 insertions(+), 20 deletions(-)
Compilation failed
In file included from test.c:4:0:
test.c: In function 'removeNode':
treemap.c:123:18: error: 'child' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         if(child -> left != NULL){
            ~~~~~~^~~~~~~
cc1.exe: all warnings being treated as errors
9414c87
Thu, Sep 18, 2025  5:34:02 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
96511fd
Thu, Sep 18, 2025  5:37:31 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
ef41973
Thu, Sep 18, 2025  5:43:32 PM: 
 treemap.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
 tests:  8|5
total_score: 15/70
cb17518
Thu, Sep 18, 2025  5:47:06 PM: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  8|5
total_score: 15/70
6a47edc
Thu, Sep 18, 2025  5:59:02 PM: 
 treemap.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:160:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if(tree = NULL || tree -> root == NULL){
             ^
treemap.c:160:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(tree = NULL || tree -> root == NULL){
     ^~
cc1.exe: all warnings being treated as errors
ead2699
